cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project( Void )

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../..)
message(STATUS "Using source dir '${CMAKE_CURRENT_SOURCE_DIR}'" ...)

include(BuildSettings)

option(VOID_RELEASE 				"Build installers and packages for release." OFF)
option(VOID_BUILD_SHARED_LIBS       "Build shared libraries" OFF)
option(VOID_BUILD_FRAMEWORK         "Build complete framework." ON)
option(VOID_BUILD_TOOLS             "Build command line tools." ON)
option(VOID_BUILD_APPS 				"Build applications." OFF)
option(VOID_BUILD_TESTS 			"Build unit tests and verification tools." OFF)
option(VOID_USE_ALIGNED_TYPES       "Use aligned scalar types." OFF)
option(VOID_USE_EXTRACTED_SYMBOLS	"Use extracted symbols (generated via preprocessing tool symex)." ON)
option(VOID_USE_HALF                "Use OpenEXR half implementation for F16 half-precision floating point." ON)
option(VOID_USE_DOUBLE_PRECISION	"Use double precision floating point for internal calculations (default is single precision)." OFF)
option(VOID_USE_BOOST_CONTAINERS 	"Use Boost STL-compatible containers." ON)
option(VOID_USE_ASMLIB 				"Use optimised ASM lib for common routines." OFF)
option(VOID_USE_GWEN	 			"Include GWEN user interface support." ON)
option(VOID_USE_SKIA 				"Include SKIA graphics toolkit support." OFF)
option(VOID_USE_HDF5	 			"Include HDF5 data format support." ON)
option(VOID_USE_JSON 				"Include JSON data format support." OFF)
option(VOID_USE_MSGPACK				"Include MSGPACK data format support." OFF)
option(VOID_USE_GS2	 				"Include Gadget Snapshot 2 hydro-dynamics simulation data format support." ON)
option(VOID_USE_FLASH 				"Include FLASH hydro-dynamics simulation data format support." ON)
option(VOID_USE_OPENGL 				"Include OpenGL support." ON)
option(VOID_USE_OIIO 				"Include OpenImageIO support." ON)
if(VOID_USE_OPENGL)
option(VOID_USE_GLUT		 		"Build the GLUT runtime library." ON)
endif()

if(VOID_BUILD_APPS)
set(VOID_BUILD_FRAMEWORK            ON)
endif()

set( VD_ROOT_DIR					${CMAKE_CURRENT_SOURCE_DIR} )
set( VD_SRC_DIR						${VD_ROOT_DIR}/source )
set( VD_APPS_DIR					${VD_ROOT_DIR}/apps )
set( VD_TOOLS_DIR					${VD_ROOT_DIR}/tools )
set( VD_TESTS_DIR					${VD_ROOT_DIR}/tests )
set( VD_RESOURCE_DIR				${VD_ROOT_DIR}/resources )
set( VD_PLUGINS_DIR					${VD_ROOT_DIR}/plugins )
set( VD_EXT_DIR						${VD_ROOT_DIR}/external )

include(UseExternal)

message(STATUS "Building external tools ...")
include(BuildExternalTools)

message(STATUS "Building external libs ...")
include(BuildExternal)

message(STATUS "Building platform ...")
include(BuildPlatform)

include(UseFramework)
include(UseSymbols)

if(VOID_BUILD_TOOLS)
message(STATUS "Building tools ...")
include(BuildTools)
endif()

if(VOID_BUILD_FRAMEWORK)
message(STATUS "Building framework ...")
include(BuildFramework)
endif()

if(VOID_BUILD_TESTS)
message(STATUS "Building tests ...")
include(BuildTests)
endif()

if(VOID_BUILD_APPS)
message(STATUS "Building applications ...")
include(BuildApps)
endif()

message(STATUS "Configured: Void Framework v${VOID_VERSION_STRING}")
