cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project( Void )

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../..)
message(STATUS "Using source dir '${CMAKE_CURRENT_SOURCE_DIR}'" ...)

include(BuildSettings)

option(VOID_RELEASE 				"Build installers and packages for release." OFF)
option(VOID_LINK_SHARED_LIBS        "Link external modules as shared libraries" OFF)
option(VOID_BUILD_SHARED_LIBS       "Build shared libraries" OFF)
option(VOID_BUILD_FRAMEWORK         "Build complete framework." ON)
option(VOID_BUILD_TOOLS             "Build command line tools." ON)
option(VOID_BUILD_APPS 				"Build applications." ON)
option(VOID_BUILD_TESTS 			"Build tests and verification tools." OFF)
if(VOID_BUILD_TESTS)
option(VOID_BUILD_UNIT_TESTS 		"Build unit tests." OFF)
option(VOID_BUILD_SPEED_TESTS 		"Build speed/performance tests." OFF)
option(VOID_BUILD_TRIAL_TESTS 		"Build trial tests." OFF)
endif()
option(VOID_USE_ALIGNED_TYPES       "Use aligned scalar types." OFF)
option(VOID_USE_EXTRACTED_SYMBOLS	"Use extracted symbols (generated via preprocessing tool symex)." ON)
option(VOID_USE_HALF                "Use OpenEXR half implementation for F16 half-precision floating point." ON)
option(VOID_USE_DOUBLE_PRECISION	"Use double precision floating point for internal calculations (default is single precision)." OFF)
option(VOID_USE_BOOST_COLLECTIONS 	"Use Boost STL-compatible collections." ON)
option(VOID_USE_ASMLIB 				"Use optimised ASM lib for common routines." OFF)
option(VOID_USE_GWEN	 			"Include GWEN user interface support." ON)
option(VOID_USE_SKIA 				"Include SKIA graphics toolkit support." OFF)
option(VOID_USE_HDF5	 			"Include HDF5 data format support." ON)
if(VOID_USE_HDF5)
option(VOID_USE_PARALLEL_HDF5	 	"Use MPI-based Parallel HDF5 support." OFF)
endif()
option(VOID_USE_FIELD3D	 			"Include Field3D data format support." ON)
option(VOID_USE_CURL		 		"Include network transactions via CURL." OFF)
option(VOID_USE_NANOFLANN	 		"Include NanoFLANN kNN search support." OFF)
option(VOID_USE_MPI		 			"Include message-passing support via MPI." ON)
option(VOID_USE_JSON 				"Include JSON data format support." OFF)
option(VOID_USE_MSGPACK				"Include MSGPACK serialisation format support." OFF)
option(VOID_USE_GS2	 				"Include Gadget Snapshot 2 hydro-dynamics simulation data format support." ON)
option(VOID_USE_FLASH 				"Include FLASH hydro-dynamics simulation data format support." ON)
option(VOID_USE_OIIO 				"Include OpenImageIO support." ON)
option(VOID_USE_OPENGL 				"Include OpenGL support." ON)

if(VOID_USE_OPENGL)
option(VOID_USE_GLUT		 		"Build the GLUT runtime library." ON)
option(VOID_USE_GLFW	 			"Build the GLFW runtime library." ON)
endif()

if(VOID_BUILD_APPS)
set(VOID_BUILD_FRAMEWORK            ON)
endif()

set( VD_ROOT_DIR					${CMAKE_CURRENT_SOURCE_DIR} )
set( VD_SRC_DIR						${VD_ROOT_DIR}/source )
set( VD_APPS_DIR					${VD_ROOT_DIR}/apps )
set( VD_TOOLS_DIR					${VD_ROOT_DIR}/tools )
set( VD_TESTS_DIR					${VD_ROOT_DIR}/tests )
set( VD_RESOURCE_DIR				${VD_ROOT_DIR}/resources )
set( VD_PLUGINS_DIR					${VD_ROOT_DIR}/plugins )
set( VD_EXT_DIR						${VD_ROOT_DIR}/external )

message(STATUS "Processing External ...")
include(UseExternal)
include(BuildExternal)

message(STATUS "Processing Platform ...")
include(UseFramework)
include(UseSymbols)
include(BuildPlatform)

if(VOID_BUILD_TOOLS)
message(STATUS "Processing Tools ...")
include(BuildTools)
endif()

if(VOID_BUILD_FRAMEWORK)
message(STATUS "Processing Framework ...")
add_subdirectory(symbols)
add_subdirectory(framework)
endif()

if(VOID_BUILD_TESTS)
message(STATUS "Processing Tests ...")
if(VOID_BUILD_UNIT_TESTS)
include(BuildUnitTests)
endif()
if(VOID_BUILD_SPEED_TESTS)
include(BuildSpeedTests)
endif()
if(VOID_BUILD_TRIAL_TESTS)
include(BuildTrialTests)
endif()
endif()

if(VOID_BUILD_APPS)
message(STATUS "Processing Applications ...")
include(BuildApps)
endif()

